--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   sqlite3: any
   connectivity_plus: any
   flutter_easyloading: any
-  platform: ^3.1.0
+  firedart:
 dev_dependencies:
   flutter_test:
     sdk: flutter
